# RTMDet-object-detection

./: .gitignore  LICENCE  README.md  makefile  pyproject.toml
.github/workflows/: pytest.yaml  rust_tests.yaml
configs/: RTMDet_training_config.template.yaml
rust/: Cargo.toml  rtmdet_object_detection.pyi
rust/src/: driver.rs  errors.rs  inference.rs  inference_engine.rs  lib.rs  postprocessing.rs  postprocessor.rs  preprocessing.rs  preprocessor.rs  python_api.rs
rust/src/inference_engine/: inference.rs  inference_config.rs
rust/src/postprocessing/: bbox.rs  detection_output.rs  detection_result.rs  detections.rs
scripts/: convert_to_onnx.py  inference.py  inference_python.py  inference_rust.py  oxford_pet_dataset_xmls_to_yaml.py  train_model.py
src/dataclasses/: bbox_label_container.py  detection_result.py  rtmdet_output.py
src/datasets/: dataset_factory.py  oxford_pets_dataset.py
src/losses/: center_cost.py  giou_loss.py  log_iou_cost.py  loss_fn_factory.py  quality_focal_loss.py  rtmdet_label_assigner.py  rtmdet_loss.py
src/model/: basic_components.py  model.py  rmtdet_tiny.py  rtmdet_models.py  types.py
src/model/backbone/: cspnext.py
src/model/head/: rtmdet_sep_bn_head.py
src/model/neck/: cspnext_pafpn.py
src/processors/: rtmdet_postprocessor.py  rtmdet_preprocessor.py  utils.py
src/rtmdet-object-detection/: Cargo.toml  rtmdet_object_detection.pyi
src/rtmdet-object-detection/src/: errors.rs  inference_engine.rs  preprocessing.rs  python_api.rs
src/rtmdet-object-detection/src/inference_engine/: inference.rs
src/rtmdet_object_detection_dev/: config_loader.py
src/rtmdet_object_detection_dev/dataclasses/: bbox_label_container.py  detection_result.py  rtmdet_output.py
src/rtmdet_object_detection_dev/datasets/: dataset_factory.py  oxford_pets_dataset.py
src/rtmdet_object_detection_dev/inference/: utils.py
src/rtmdet_object_detection_dev/losses/: center_cost.py  giou_loss.py  log_iou_cost.py  loss_fn_factory.py  quality_focal_loss.py  rtmdet_label_assigner.py  rtmdet_loss.py
src/rtmdet_object_detection_dev/model/: basic_components.py  model.py  rtmdet_models.py
src/rtmdet_object_detection_dev/model/backbone/: cspnext.py
src/rtmdet_object_detection_dev/model/head/: rtmdet_sep_bn_head.py
src/rtmdet_object_detection_dev/model/neck/: cspnext_pafpn.py
src/rtmdet_object_detection_dev/processors/: rtmdet_postprocessor.py  rtmdet_preprocessor.py
src/rtmdet_object_detection_dev/training/: lr_scheduler_factory.py  optimizer_factory.py  train.py  training_config.py
src/training/: optimizer_factory.py  train.py  training_config.py
tests/: utils.py
tests/test_dataclasses/: test_rtmdet_output.py
tests/test_losses/: test_center_cost.py  test_giou_loss.py  test_log_iou_cost.py  test_quality_focal_loss.py  test_rtmdet_label_assigner.py  test_rtmdet_loss.py
tests/test_processors/: test_rtmdet_postprocessor.py  test_rtmdet_preprocessor.py
