[project]
name = "rtmdet-object-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.1.3",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.1",
    "onnxscript>=0.2.5",
    "pyaml>=25.1.0",
    "pydantic>=2.11.4",
    "torch>=2.5.1",
    "torchvision>=0.20.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "maturin>=1.8.4",
    "patchelf>=0.17.2.2",
    "pytest>=8.3.3",
    "ruff>=0.12.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]
torchvision = [
    { index = "pytorch-cu128" },
]

[tool.pytest.ini_options]
pythonpath = [
    ".", "src",
]

[tool.ruff]
# Exclude common virtual environments and cache folders
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
    ".mypy_cache",
    ".ruff_cache",
]

line-length = 120
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = [
    "D100",
    "D104",
    "PYI021",
]

fixable = [
    "ALL"
]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
