[package]
name = "rtmdet-object-detection"
version = "0.1.0"
edition = "2024"

[lib]
name = "rtmdet_object_detection"
crate-type = ["cdylib"]

[profile.dev]
rpath = true

[profile.release]
rpath = true

[dependencies]
glob = "0.3.2"
image = "0.25.6"
ndarray = "0.16"
ort = {version="2.0.0-rc.10", features=["cuda", "ndarray", "tensorrt"]}
itertools = "0.14.0"
pyo3 = { version="0.24.2", features=["extension-module"]}
numpy = "0.24.0"
thiserror = "2.0.12"
